--- a/style.css
+++ b/style.css
@@ -457,3 +457,158 @@ video {
         "Flora Flora Varisco ";
     }
 }
+
+
+/* VARISCO411 - MOBILE */
+    .project-introduction p{
+        padding: 1em 0 ;
+    }
+
+
+    .row{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        padding-top: 100px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: black;
+    }
+    
+    .modal-content {
+        position: relative;
+        background-color: #fff;
+        margin: auto;
+        padding: 0;
+        width: 100%;
+        max-width: 1000px;
+    }    
+
+    .close {
+        color: white;
+        position: absolute;
+        top: 10px;
+        right: 25px;
+        font-size: 35px;
+        font-weight: bold;
+    }
+    
+    .close:hover,
+    .close:focus {
+        color: #999;
+        text-decoration: none;
+        cursor: pointer;
+    }
+    
+    .mySlides {
+        display: none;
+    }
+    
+    .cursor {
+        cursor: pointer;
+    }
+    
+    
+    .prev,
+    .next {
+        cursor: pointer;
+        position: absolute;
+        top: 50%;
+        width: auto;
+        padding: 16px;
+        margin-top: -50px;
+        color: white;
+        font-weight: bold;
+        font-size: 20px;
+        transition: 0.6s ease;
+        border-radius: 0 3px 3px 0;
+        user-select: none;
+        -webkit-user-select: none;
+    }
+    
+    .next {
+        right: 0;
+        border-radius: 3px 0 0 3px;
+    }
+    
+
+    .prev:hover,
+    .next:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+      
+    .caption-container {
+        text-align: center;
+        background-color: black;
+        padding: 2px 16px;
+        color: white;
+    }
+      
+    .demo {
+        opacity: 0.6;
+    }
+      
+    .active,
+    .demo:hover {
+        opacity: 1;
+    }
+    img{
+        margin-bottom: -4px;
+    }
+      
+    img.hover-shadow {
+        transition: 0.3s;
+    }
+      
+    .hover-shadow:hover {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    }
+    
+    .project-introduction{
+        margin-left: 1em;
+    }
+    .singleProjects-photos h3{
+        margin: 2em 1em;
+    }
+/* VARISCO411 - DESKTOP */
+@media(min-width:1200px){
+    .row{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin: 0 auto;
+    }
+    .Varisco411-background{
+        background-image: url(img/Piazza-411-Varisco/render/render2.jpg);
+        background-size: cover;
+    }
+    .dark-shadow{
+        background-color: rgba(3,3,3,0.4);
+        width: 100%;
+        height:100%;
+        margin: 0;
+    }
+    .content-header{
+        padding: 0;
+    }
+    .singleProjects-photos h3{
+        margin: 5em 0;
+    }
+
+    .column {
+        padding: 1em ;
+        float: left;
+        width:33.33%;
+    }
+        
+
+}
