--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-.fade-in{
-    opacity: 0;
-    transition: 1s ease-in;
-}
-.fade-in.appear{
-    opacity: 1;
-}
 *{
     margin: 0;
     padding: 0;
@@ -98,6 +91,14 @@ a{
 .btn-all-projects{
     float: right;
     margin: 2em 0;
+}
+/* effect scroll class */
+.fade-in{
+    opacity: 0;
+    transition: 1s ease-in;
+}
+.fade-in.appear{
+    opacity: 1;
 }
 /* HEADER DESCKTOP */
 @media(min-width:1200px){
